--- a/.github/workflows/android2.yml
+++ b/.github/workflows/android2.yml
@@ -12,15 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: gradle
+    - name: Setup Android SDK Tools
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradle wrapper --gradle-version=5.1.1 
+      uses: android-actions/setup-android@v2.0.2
+    
