--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -16,11 +16,15 @@ jobs:
     - name: set up JDK 11
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
-        distribution: 'temurin'
+        java-version: '1.8'
+
         cache: gradle
 
+
+    - name: Setup Android SDK Tools
+
+      uses: android-actions/setup-android@v2.0.2
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew --no-daemon build
